--- a/类数组.html
+++ b/类数组.html
@@ -1,12 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+
 <body>
-  
+  <div></div>
+  <div></div>
+  <div></div>
+  <script>
+    // function test() {
+    //   console.log(arguments);
+    //   arguments.push(7);
+    //   console.log(arguments);
+    // }
+    // test(1, 2, 3, 4, 5, 6);
+
+
+    // var oDiv = document.getElementsByTagName('div');
+    // console.log(oDiv);
+
+    // function test() {
+    //   console.log(arguments);
+    // }
+    // test(1, 2, 3, 4, 5, 6);
+
+    // var arr1 = [1, 2, 3, 4, 5, 6];
+    // console.log(arr1);
+
+    var obj = {
+      "0": 1,
+      "1": 2,
+      "2": 3,
+      "3": 4,
+      "4": 5,
+      "5": 6,
+      'length': 6,
+    }
+    Object.prototype.push = Array.prototype.push;
+    Object.prototype.splice = Array.prototype.splice;
+    obj.push(7);
+    console.log(obj);
+
+
+    
+  </script>
 </body>
+
 </html>
