--- a/正则表达式-1.html
+++ b/正则表达式-1.html
@@ -102,9 +102,9 @@
     // str ='ab989asabsdababcde';
     // console.log(str.match(reg)); // ['ab']
 
-        var reg = /cd$/g,
-        str ='ab989asabsdababcd';
-        console.log(str.match(reg)); // ['cd']
+        // var reg = /cd$/g,
+        // str ='ab989asabsdababcd';
+        // console.log(str.match(reg)); // ['cd']
   </script>
 
 </body>
