--- a/可视化图表/echarts使用.html
+++ b/可视化图表/echarts使用.html
@@ -68,43 +68,31 @@
         // 百分比要加引号
         left: '30%'
       },
-      toolbox:{
-        feature:{
-          saveAsImage:{},
-          dataZoom:{},
-          restore:{}
+      toolbox: {
+        feature: {
+          saveAsImage: {},
+          dataZoom: {},
+          restore: {}
         }
       },
       yAxis: {},
       // 系列,一个系列是一个图表类型
       series: [{
-          name: '分类',
-          type: 'pie', //饼图
-          radius: 50, //半径
-          center: [400, '10'], //位置 可以是像素 也可以是百分比
-          top:'10%',
-          left:'20%',
-          // 使用dataset的数据
-          encode: {
-            itemName: 'kind',
-            value: 'v3'
-          }
+          type: "bar",
+          seriesLayoutBy: 'row',
+          xAxisIndex: 0,
+          yAxisIndex: 0
         },
         {
-          name: '折线图',
-          type: 'line',
-          // 使用dataset的数据
-          encode: {
-            x: 'quarter',
-            y: 'v1'
-          }
+          type: "bar",
+          seriesLayoutBy: 'row',
+          xAxisIndex: 0,
+          yAxisIndex: 0
         }, {
-          name: '柱状图',
-          type: 'bar',
-          encode: {
-            x: 'quarter',
-            y: 'v2'
-          }
+          type: "bar",
+          seriesLayoutBy: 'row',
+          xAxisIndex: 0,
+          yAxisIndex: 0
         }
       ]
     };
