--- a/练习题/Promise.html
+++ b/练习题/Promise.html
@@ -182,10 +182,162 @@
     // async1().then(res => console.log(res)); // 微3
     // console.log("7"); // 同步4
 
+
+    // ————————————————————————————————————————————————————
+    // async function async1() {
+    //   console.log(1); // 同步2
+    //   await new Promise(resolve => {
+    //     console.log(2); // 同步3
+    //     resolve(3);
+    //   });
+    //   // 靠前面的微任务先执行
+    //   console.log(4); // 微1
+    //   return 5;
+    // }
+    // console.log(6); // 同步1
+    // // 接收resolve（3）
+    // async1().then(res => {
+    //   console.log(res); // 微2
+    // });
+    // new Promise(resolve => {
+    //   console.log(7); // 同步 4
+    //   setTimeout(() => {
+    //     console.log(8); // 异步1
+    //   }, 0);
+    // })
+    // ————————————————————————————————————————————————————
+    // async function testSomething() {
+    //   console.log("1"); // 同步 2
+    //   return "2" // 返回的是包装后的promise 属于微任务
+    // }
+
+    // async function testAsync() {
+    //   console.log("3"); // 微任务 的同步任务1
+    //   return Promise.resolve("4");
+    // }
+
+    // async function test() {
+    //   console.log("5"); // 同步1 
+    //   // v1第一个先注册的微任务回调
+    //   const v1 = await testSomething();
+    //   console.log(v1); // 微1
+    //   // v2 要等待 v1 的结果，v2 任务在v1后执行
+    //   const v2 = await testAsync();
+    //   console.log(v2); // 微3 
+    //   console.log(v1, v2); // 微4
+    // }
+    // test();
+    // let promise = new Promise(resolve => {
+    //   console.log("6"); // 同步 3
+    //   resolve("7") // 微任务 2
+    // });
+    // // 第二个注册的微任务
+    // promise.then(val => console.log(val)); // 微2 结果
+    // console.log("8"); // 同步 4
+
+    // ————————————————————————————————————————————————————
+
+    // async function async1() {
+    //   await async2(); // 接收到reject，不继续执行
+    //   console.log("1");
+    //   return "2";
+    // }
+
+    // async function async2() {
+    //   return new Promise((resolve, reject) => {
+    //     console.log("3"); // 同步1
+    //     reject("4")
+    //   });
+    // }
+    // // 成功之后才会执行，所以会报错
+    // async1().then(res => console.log(res)).catch(err => {
+    //   console.log(err); // 捕获错误4
+    // });
+    // ————————————————————————————————————————————————————
+
+    // async function async1() {
+    //   try {
+    //     await Promise.reject("1");
+    //   } catch (e) {
+    //     console.log(2); // 微1 捕获错误继续执行
+    //   }
+    //   console.log(3); // 2
+    //   return Promise.resolve("4");
+    // }
+
+    // async1().then(res => console.log(res)); // 3
+    // console.log("5"); // 同步1
+
+    // ————————————————————————————————————————————————————
+
+    // const async1 = async () => {
+    //   console.log("1"); // 同步2
+
+    //   setTimeout(() => {
+    //     console.log("2"); // 异步2
+    //   }, 2000);
+    //   await new Promise(resolve => {
+    //     console.log(3); // 同步3
+    //   });
+    //   // 微任务无状态，后续代码不执行
+    //   console.log(4);
+    //   return 5;
+    // };
+
+    // console.log("6"); // 同步1
+    // async1().then(res => console.log(res)); // 一直等待Promise的值
+    // console.log(7); // 同步 4
+
+    // // Promise
+    // Promise.resolve(1)
+    //   // .then必须接收的是函数，忽略
+    //   .then(2)
+    //   // 忽略
+    //   .then(Promise.resolve(3))
+    //   // 忽略
+    //   .catch(4)
+    //   .then(res => console.log(res)); // 微1 1
+
+    // setTimeout(() => {
+    //   console.log(8); // 异步 1
+    // }, 1000);
+
+    // ————————————————————————————————————————————————————
+
+    // const p1 = new Promise(resolve => {
+    //     setTimeout(() => {
+    //       resolve(1);
+    //       console.log(2); // 3 2
+    //     }, 0);
+    //     resolve(3)
+    //     resolve(4)
+    //   })
+    //   .then(res => {
+    //     console.log(res); // 1  3
+    //     setTimeout(() => {
+    //       // console.log(p1); //4 Promise fulfilled
+    //       p1.then(res => console.log(res));
+    //     }, 1000);
+    //     return 3
+    //   })
+    //   .finally(res => {
+    //     // 因为前一个.then没有resolved 或 rejected 返回 undefined
+    //     console.log("finally", res); // 2 finally undefined
+    //   });
     
     // ————————————————————————————————————————————————————
 
-    
+    // const p1 = new Promise((resolve, reject) => {
+    //   resolve(3);
+    // })
+
+    // p1.then((res) => {
+    //   console.log(res);
+    //   setTimeout(() => {
+    //     p1.then(res => console.log(res))
+    //   }, 1000)
+    // })
+
     // ————————————————————————————————————————————————————
   </script>
 </body>
