--- a/HTML/穿透.html
+++ b/HTML/穿透.html
@@ -13,7 +13,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: (0, 0, 0, .6);
+    background-color: rgba(0, 0, 0, .6);
+    z-index: 2;
   }
 
   button,
@@ -27,15 +28,25 @@
 <body>
   <div class="mask"></div>
   <button id="btn">btn</button><br />
-  <a href="www.baidu.com" id="lk">link</a><br />
+  <a href="https://www.baidu.com/" id="lk">link</a><br />
+
   <input type="text">
+  <!-- 引入 -->
+  <script src="./fastclick.js"></script>
   <script>
+    // 使用 FastClick
+    FastClick.attach(document.body);
     var oBtn = document.getElementById('btn');
     var oMask = document.getElementsByClassName('mask')[0];
-
-    oMask, addEventListener('touchstart', function () {
+    var opacityMask = document.getElementsByClassName('opacity-mask')[0];
+    // 事件换成  click
+    oMask.addEventListener('click', function () {
       this.style.display = 'none';
     });
+
+    oBtn.onclick = function () {
+      console.log(1);
+    }
   </script>
 </body>
 
