--- a/DOM/读写样式属性、操作伪元素、元素运动初探.html
+++ b/DOM/读写样式属性、操作伪元素、元素运动初探.html
@@ -7,42 +7,65 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <style type="text/css">
-  div {
+  .box {
     width: 100px;
     height: 100px;
     background-color: aquamarine;
   }
+
+  .box.active {
+    width: 200px;
+    height: 200px;
+    border: 1px #000 solid;
+    background-color: burlywood;
+    border-radius: 50%;
+  }
 </style>
 
 <body>
-  <div></div>
+  <div class="box"></div>
   <script type="text/javascript">
     // div.style.width = '200px';
     // div.style.backgroundColor = 'orange';
     // // 保留字
     // div.style.cssFloat = 'left';
-    var div = document.getElementsByTagName('div')[0];
+    // var div = document.getElementsByTagName('div')[0];
     // console.log(window.getComputedStyle(div, null));
     // console.log(window.getComputedStyle(div, null)).prop;
 
     // console.log(elem.currentStyle);
 
-    function getStyles(elem, prop) {
-      if (window.getComputedStyle) {
-        if (prop) {
-          return window.getComputedStyle(elem, null)[prop];
-        } else {
-          return window.getComputedStyle(elem, null);
-        }
-      } else {
-        if (prop) {
-          return elem.currentStyle[prop];
-        } else {
-          return elem.currentStyle;
-        }
-      }
-    }
-    console.log(getStyles(div, 'width'));
+    // function getStyles(elem, prop) {
+    //   if (window.getComputedStyle) {
+    //     if (prop) {
+    //       return window.getComputedStyle(elem, null)[prop];
+    //     } else {
+    //       return window.getComputedStyle(elem, null);
+    //     }
+    //   } else {
+    //     if (prop) {
+    //       return elem.currentStyle[prop];
+    //     } else {
+    //       return elem.currentStyle;
+    //     }
+    //   }
+    // }
+    // console.log(getStyles(div, 'width'));
+
+    // console.log(window.getComputedStyle(div, null));
+    // // 获取伪元素的宽高
+    // console.log(window.getComputedStyle(div, "after").width)
+
+
+    // div.onclick = function () {
+    //   this.className += ' active';
+    // }
+
+    // var div = document.getElementsByTagName('div')[0];
+    // div.onclick = function () {
+    //   this.className += ' active'
+    // }
+
   </script>
 </body>
 
